2013-02-24  Erwin Waterlander  <waterlan@xs4all.nl>

	* msys/msys-m4.xml: Updated for m4 version 1.4.16-2.
	* msys/issue.log: Updated accordingly.

2013-02-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add missing DLL dependency for msys-bzip2-bin.

	* msys/msys-bzip2.xml (msys-bzip2-1.0.6-1-bin): Add dependency on...
	(msys-libbz2-%-msys-%-dll-1.tar): ...this; publish it.

	* msys/issue.log: Update accordingly.

2013-01-27  Erwin Waterlander  <waterlan@xs4all.nl>

	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 6.0.3.
	* mingw32/issue.log: Updated accordingly.
	* msys/msys-dos2unix.xml: Updated for dos2unix version 6.0.3.
	* msys/issue.log: Updated accordingly.

2012-11-22  Cesar Strauss  <cestrauss@gmail.com>

	Update & publish msys-core.

	* msys/msys-core.xml: Update to 1.0.18-1.
	* msys/issue.log: Updated accordingly.

2012-11-12  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-binutils.

	* mingw32/mingw32-binutils.xml: Update to 2.23.1-1.
	* mingw32/issue.log: Updated accordingly.

2012-11-05  Cesar Strauss  <cestrauss@gmail.com>

	Update & publish mingw32-gcc4.

	* mingw32/mingw32-gcc4.xml: Update to 4.7.2-1.
	* mingw32/issue.log: Update accordingly.

2012-09-09  Erwin Waterlander  <waterlan@xs4all.nl>
	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 6.0.2.
	* msys/msys-dos2unix.xml: Updated for dos2unix version 6.0.2.

2012-09-07  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add support files for git and Mercurial.

	* .gitignore .hgignore: New files.

2012-09-02  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-make.

	* mingw32/mingw32-make.xml: Update to 3.82.90-2-cvs-20120902.
	* mingw32/issue.log: Updated accordingly.

2012-08-27  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish mingw32-gdb.

	* mingw32/mingw32-gdb.xml: Update to 7.5-1.
	* mingw32/issue.log: Updated accordingly.
