@@ -50,11 +50,12 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   d31c39c6584fde6d4b9ddafbca913509b32a1dfc 2012073100 mingw32-mpc.xml
   99995a8e17659b6514f71ae2b17bbbcd8eb4c0a9 2012073100 mingw32-mpfr.xml
-  250646540a24a6b329cebb13d4b71aa195fda8b2 2012040500 mingw32-package-list.xml
+  983af8ad24a6f97da867784dfeeecc6661d54d88 2013030500 mingw32-package-list.xml
   40c94ac07003ac8f36558a8c33581a748ec03e3a 2012073100 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   9399cb6c2efd8fd907c42a278a6f41bbde9e440c 2011091400 mingw32-pthreads-w32.xml
   428964289b3509293a13c9394199b5e2d4887c3e 2012063001 mingw32-runtime.xml
+  60ec0b8ba4d87a43542ea0c5b17917aece3dce21 2013040900 mingw32-wsl-candidate.xml
   247a02890f109a5fe4996fde4af9d576dca3cd1e 2012073100 mingw32-xz.xml
   4a2e1515655331483b8ddc898b2405fb89401d73 2012073100 mingw32-zlib.xml
 #
