@@ -1,3 +1,9 @@
+2013-04-09  Earnie Boyd  <earnie@users.sourceforge.net>
+
+	* mingw32/mingw32-package-list.xml: Add mingw32-wsl-candidate.xml.
+	* mingw32/mingw32-wsl-candidate.xml: New file.
+	* mingw32/issue.log: Updated accordingly.
+
 2013-02-24  Erwin Waterlander  <waterlan@xs4all.nl>
 
 	* msys/msys-m4.xml: Updated for m4 version 1.4.16-2.
